# summa_technologica

./: .env.example  .gitignore  BEGINNER_GUIDE.md  README.md  V2_ROADMAP.md  output.md  pyproject.toml
docs/: PROJECT_STRUCTURE.md  V2_WORKFLOW_DETAILED.md  V3_GAME_PLAN.md
eval/: benchmarks.yaml  rubric.md
schemas/: hypothesis_schema.json
summa_technologica/: __init__.py  __main__.py  cli.py  config.py  crew.py  crew_v2.py  crew_v2_postprocess.py  crew_v2_stages.py  eval_compare.py  eval_v1.py  formatter.py  formatter_v2.py  models.py  semantic_scholar.py  semantic_scholar_cli.py  v2_contracts.py
summa_technologica.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
summa_technologica/config/: agents.yaml  agents_v2.yaml  tasks.yaml  tasks_v2.yaml
tests/: test_crew_v2_helpers.py  test_eval_compare.py  test_models.py  test_semantic_scholar.py  test_v2_contracts.py
